@@ -1,12 +1,14 @@
 package com.domingueti.tradebot.modules.CashBalance.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.domingueti.tradebot.modules.CashBalance.dtos.CashBalanceDTO;
+import com.domingueti.tradebot.modules.CashBalance.models.CashBalance;
 import com.domingueti.tradebot.modules.CashBalance.repositories.CashBalanceRepository;
 
 @Service
@@ -17,10 +19,10 @@ private CashBalanceRepository cashBalanceRepository;
 	
 	@Transactional(readOnly = true)
 	public List<CashBalanceDTO> execute() {
-//		validator.execute(userId); check with authenticated userId;
 		
-		return cashBalanceRepository.findAll().stream()
-				.map(CashBalanceDTO::new).toList();
+		List<CashBalance> cashBalances = cashBalanceRepository.findAllByDeletedAtIsNull();
+		
+		return cashBalances.stream().map(CashBalanceDTO::new).collect(Collectors.toList());
 	}
 	
 }
