@@ -1,12 +1,14 @@
 package com.domingueti.tradebot.modules.Cryptocurrency.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.domingueti.tradebot.modules.Cryptocurrency.dtos.CryptocurrencyDTO;
+import com.domingueti.tradebot.modules.Cryptocurrency.models.Cryptocurrency;
 import com.domingueti.tradebot.modules.Cryptocurrency.repositories.CryptocurrencyRepository;
 
 @Service
@@ -17,10 +19,10 @@ public class GetCryptocurrenciesService {
 	
 	@Transactional(readOnly = true)
 	public List<CryptocurrencyDTO> execute() {
-//		validator.execute(userId); check with authenticated userId;
+
+		List<Cryptocurrency> cryptocurrencies = cryptocurrencyRepository.findAllByDeletedAtIsNull();
 		
-		return cryptocurrencyRepository.findAll().stream()
-				.map(CryptocurrencyDTO::new).toList();
+		return cryptocurrencies.stream().map(CryptocurrencyDTO::new).collect(Collectors.toList());
 	}
 	
 }
