@@ -1,12 +1,14 @@
 package com.domingueti.tradebot.modules.InvestmentBalance.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.domingueti.tradebot.modules.InvestmentBalance.dtos.InvestmentBalanceDTO;
+import com.domingueti.tradebot.modules.InvestmentBalance.models.InvestmentBalance;
 import com.domingueti.tradebot.modules.InvestmentBalance.repositories.InvestmentBalanceRepository;
 
 @Service
@@ -17,9 +19,9 @@ public class GetInvestmentBalancesService {
 	
 	@Transactional(readOnly = true)
 	public List<InvestmentBalanceDTO> execute() {
-//		validator.execute(userId); check with authenticated userId;
+
+		List<InvestmentBalance> investmentBalances = investmentBalanceRepository.findAllByDeletedAtIsNull();
 		
-		return investmentBalanceRepository.findAll().stream()
-				.map(InvestmentBalanceDTO::new).toList();
+		return investmentBalances.stream().map(InvestmentBalanceDTO::new).collect(Collectors.toList());
 	}
 }
