@@ -1,12 +1,14 @@
 package com.domingueti.tradebot.modules.User.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.domingueti.tradebot.modules.User.dtos.UserDTO;
+import com.domingueti.tradebot.modules.User.models.User;
 import com.domingueti.tradebot.modules.User.repositories.UserRepository;
 
 @Service
@@ -17,10 +19,10 @@ public class GetUsersService {
 	
 	@Transactional(readOnly = true)
 	public List<UserDTO> execute() {
-//		validator.execute(userId); check with authenticated userId;
+
+		List<User> users = userRepository.findAllByDeletedAtIsNull();
 		
-		return userRepository.findAll().stream()
-				.map(UserDTO::new).toList();
+		return users.stream().map(UserDTO::new).collect(Collectors.toList());
 	}
 
 }
